# graph_priority_queue

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  README_modular.md  Sumarizacao_Doc_TCERJ.csv  main.cpp  main_modular.cpp  test_doxygen.sh  tokenizer_wrapper.cpp  workflow_processor
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  simple-ci.yml
include/: types.h
include/pipeline/: pipeline_manager.h  text_processor.h
include/scheduler/: workflow_scheduler.h
include/tokenizer/: tokenizer_wrapper.h
include/utils/: csv_reader.h  timer.h
src/: types.cpp
src/pipeline/: pipeline_manager.cpp  text_processor.cpp
src/scheduler/: workflow_scheduler.cpp
src/tokenizer/: tokenizer_wrapper.cpp
src/utils/: csv_reader.cpp  timer.cpp
tests/: CMakeLists.txt  main_test.cpp  test_csv_reader.cpp  test_docs.csv  test_pipeline_manager.cpp  test_text_processor.cpp  test_workflow_scheduler.cpp
